Backend/musicstore-backend/kubernetes/infrastructure/azurite.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    component: azurite
  name: azurite
spec:
  selector:
    matchLabels:
      component: azurite
  template:
    metadata:
      labels:
        component: azurite
    spec:
      volumes:
        - name: azurite-certs
          secret:
            secretName: azurite-certs
      containers:
        - image: mcr.microsoft.com/azure-storage/azurite
          imagePullPolicy: IfNotPresent
          args:
            - azurite
            - '--blobHost'
            - '0.0.0.0'
            - '--blobPort'
            - '10000'
            - '--queueHost'
            - '0.0.0.0'
            - '--queuePort'
            - '10001'
            - '--tableHost'
            - '0.0.0.0'
            - '--tablePort'
            - '10002'
            - '--oauth'
            - 'basic'
            - '--cert'
            - '/certs/cert.pem'
            - '--key'
            - '/certs/key.pem'
            - '--debug'
            - '/tmp/debug.log'
            - '--loose'
            - '--disableProductStyleUrl'
          name: azurite
          ports:
            - containerPort: 10000
              name: blob
              protocol: TCP
            - containerPort: 10001
              name: queue
              protocol: TCP
            - containerPort: 10002
              name: table
              protocol: TCP
          resources:
            limits:
              cpu: '0'
              memory: '0'
            requests:
              cpu: '0'
              memory: '0'
          volumeMounts:
            - name: azurite-certs
              mountPath: /certs

---

apiVersion: v1
kind: Service
metadata:
  name: azurite
spec:
  ports:
    - name: storage-azurite-blobs
      port: 10000
      targetPort: 10000
    - name: storage-azurite-queues
      port: 10001
      targetPort: 10001
    - name: storage-azurite-tables
      port: 10002
      targetPort: 10002
  selector:
    component: azurite

---

kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: azurite-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /devstoreaccount1/$1
spec:
  ingressClassName: nginx
  rules:
    - host: blob.contoso.com
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: azurite
                port:
                  number: 10000
